--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ nav .navbar{
 }
 
 .landing{
-  background-image: url("../images/background.jpeg");
+  background-image: url("../images/bg2.jpeg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
